<resources>
    <string name="app_name">FamilieApp</string>
    <string name="weekplan">Weekly Planner</string>
    <string name="monthplan">Monthly Planner</string>
    <string name="groceries">Groceries</string>
    <string name="dinner">Dinner</string>
    <string name="messages">Messages</string>
    <string name="wishlist">Wishlist</string>
    <string name="allowance">Allowance</string>
    <string name="groceries_toast">You pressed Groceries!</string>
    <string name="cloud">Cloud</string>
    <string name="vacation">Vacation Planner</string>
</resources>
