<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/weekplan"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/monthplan"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/tv_groceries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_format_list_bulleted_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/groceries"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_local_dining_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/dinner"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_priority_high_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/messages"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_format_list_bulleted_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/wishlist"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_attach_money_black_24dp"
        android:drawablePadding="7dp"
        android:gravity="center_vertical"
        android:hint="@string/allowance"
        android:textSize="40dp" />

</LinearLayout>